# minimal_os

./: Cargo.toml  README.md  setup.sh
.cargo/: config.toml
src/: allocator.rs  gdt.rs  interrupts.rs  io.rs  keyboard.rs  lib.rs  main.rs  memory.rs  serial.rs  test.rs  vga.rs
src/fs/: memfs.rs  mod.rs
src/task/: executor.rs  mod.rs
tests/: heap_allocation.rs  stack_overflow.rs
