[package]
edition = "2018"
name = "minimal_os"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.bootimage]
test-args = [
  "-device",
  "isa-debug-exit,iobase=0xf4,iosize=0x04",
  "-serial",
  "stdio",
  "-display",
  "none",
]
test-timeout = 10   # (in seconds)
test-success-exit-code = 33

[dependencies]
bootloader = "0.9"
spin = "0.5.2"
uart_16550 = "0.2.0"
volatile = "=0.2.6"
x86_64 = "0.14.2"

[dependencies.lazy_static]
features = ["spin_no_std"]
version = "1.0"
