[package]
edition = "2018"
name = "minimal_os"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.bootimage]
test-args = [
    "-device",
    "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial",
    "stdio",
    "-display",
    "none",
]
test-timeout = 10   # (in seconds)
test-success-exit-code = 33

[dependencies]
bootloader = { version = "0.9", features = ["map_physical_memory"] }
spin = "0.5.2"
uart_16550 = "0.2.0"
volatile = "=0.2.6"
x86_64 = "0.14.2"
pic8259 = "0.10.1"
pc-keyboard = "0.5.0"
linked_list_allocator = "0.9.0"
# ext2 = { path = "modules/ext2-rs" }

[dependencies.conquer-once]
version = "0.2.0"
default-features = false

[dependencies.crossbeam]
version = "*"
default-features = false
features = ["alloc"]

[dependencies.lazy_static]
features = ["spin_no_std"]
version = "1.0"

[dependencies.futures]
version = "*"
default-features = false
features = ["alloc"]

[[test]]
name = "stack_overflow"
harness = false